--- a/01-Drum-Kit/index.html
+++ b/01-Drum-Kit/index.html
@@ -3,13 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Drum Kit</title>
   </head>
   <body>
     <div class="container">
       <main>
-        <section class="buttons"></section>
+        <section class="buttons">
+          <button data-key="a" class="--btn">
+            <kbd>a</kbd>
+            <span class="sound">clap</span>
+          </button>
+          <button data-key="s" class="--btn">
+            <kbd>s</kbd>
+            <span class="sound">hihat</span>
+          </button>
+          <button data-key="d" class="--btn">
+            <kbd>d</kbd>
+            <span class="sound">kick</span>
+          </button>
+          <button data-key="f" class="--btn">
+            <kbd>f</kbd>
+            <span class="sound">openhat</span>
+          </button>
+          <button data-key="g" class="--btn">
+            <kbd>g</kbd>
+            <span class="sound">boom</span>
+          </button>
+          <button data-key="h" class="--btn">
+            <kbd>h</kbd>
+            <span class="sound">ride</span>
+          </button>
+          <button data-key="j" class="--btn">
+            <kbd>j</kbd>
+            <span class="sound">snare</span>
+          </button>
+          <button data-key="k" class="--btn">
+            <kbd>k</kbd>
+            <span class="sound">tom</span>
+          </button>
+          <button data-key="l" class="--btn">
+            <kbd>l</kbd>
+            <span class="sound">tink</span>
+          </button>
+        </section>
+
+        <section class="sounds">
+          <audio data-key="a" src="./assets/clap.wav"></audio>
+          <audio data-key="s" src="./assets/hihat.wav"></audio>
+          <audio data-key="d" src="./assets/kick.wav"></audio>
+          <audio data-key="f" src="./assets/openhat.wav"></audio>
+          <audio data-key="g" src="./assets/boom.wav"></audio>
+          <audio data-key="h" src="./assets/ride.wav"></audio>
+          <audio data-key="j" src="./assets/snare.wav"></audio>
+          <audio data-key="k" src="./assets/tom.wav"></audio>
+          <audio data-key="l" src="./assets/tink.wav"></audio>
+        </section>
       </main>
     </div>
+
+    <!-- JavaScript -->
+    <script src="./main.js"></script>
   </body>
 </html>
